--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"webpack-cli": "3.1.2"
 	},
 	"dependencies": {
+		"axios": "0.18.0",
 		"css-loader": "^1.0.1",
 		"express": "4.16.4",
 		"react": "16.6.3",
